02-envoy-gateway/11-clienttrafficpolicy/manifests/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tuned-client
  namespace: demo
spec:
  parentRefs:
    - name: tuned-client
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: helloworld
          port: 8080
